--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ fastapi = "^0.115.6"
 uvicorn = "^0.34.0"
 pydantic = "^2.10.5"
 logging = "^0.4.9.6"
+python-multipart = "^0.0.20"
 
 
 [build-system]
